# Carp-Lang

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Dev.md  README.md  expected output.txt  run.ps1  vcpkg.json
other/: parser.hpp
src/: SemanticAnalyser.cpp  main.cpp  parser.cpp  tokeniser.cpp
src/headers/: SemanticAnalyser.hpp  parser.hpp  tokeniser.hpp  utils.hpp
src/interpreter/: interpreter.cpp  interpreter.hpp
src/modules/: SemanticAnalyser.ixx  parser.ixx  tokeniser.ixx  utils.ixx
tests/: main.carp  main1.carp
